# JAVIS-DAVI

./: .editorconfig  .env.example  .gitignore  BACKLOG.md  CLAUDE.md  Makefile  PROJECT_MAP.md  PROJECT_SPEC.md  QUALITY_REPORT.md  README.md  RUNBOOK.md  SPEC_INDEX.md  bench_balanced_cpu_tts.json  bench_fast_cpu_tts.json  bench_noisy_room_tts.json  diff.txt  mypy_smoketest.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt
Documentos/: PLANO_UNICO.md  README.md  REGISTRO_IMPLEMENTACAO.md  telemetry_summary.json
docs/: ARQUITETURA.md
jarvis/: __init__.py  app.py
jarvis/voz/: tts.py  (+3 more)
rust/jarvis_vision/: Cargo.toml  pyproject.toml
rust/jarvis_vision/src/: capture.rs  compare.rs  detect.rs  lib.rs  mask.rs  ocr.rs  policy.rs  validator.rs
rust/jarvis_vision/tests/: test_basic.rs
scripts/: add_system_metrics.py  analyze_longrun.py  analyze_stability.py  auto_voice_bench.py  bench_history_append.py  bench_interface.py  bench_vision_actions.py  build_notebooklm_bundle.py  build_rust_audio.sh  build_rust_vision.sh  check_system_ready.sh  compare_baseline.py  compare_models.py  compare_python_rust.py  compare_python_rust_vision.py  generate_report.py  generate_test_audio.py  healthcheck.sh  instalar_agentes.sh  install_deps.sh  install_launcher.sh  measure_local_weights.py  measure_validator_weight.py  play_test_audios.sh  rotate_logs.sh  run_benchmarks.sh  run_bloco3.sh  run_bloco4.sh  run_scenarios.py  run_smoke.py  start_gui_panel.sh  start_remote_memory_server.sh  telemetry_report.py  update_github.sh  validate_interface.py  (+4 more)
(+504 files in other folders)
