[package]
name = "jarvis_vision"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
regex = "1"
once_cell = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
tempfile = "3"
leptess = { version = "0.14.0", optional = true }

[features]
default = []
leptess = ["dep:leptess"]
